# stacky-rs

./: Cargo.toml  README.md
scripts/: test.sh  test_pipe.sh
scripts/fixtures/: panic.txt  panic2.txt  panic3.txt  panic_prefixed.txt
src/: config.rs  main.rs  parser.rs  parser2.rs  parser3.rs  types.rs  utils.rs
src/tests/fixtures/: panic.txt  panic_prefixed.txt
