[package]
name = "stacky"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt", "io-util", "io-std"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
nvim-rs = { version = "0.7.0", features = ["use_tokio"] }
#chumsky = "0.9.3"
nom = "5.0"
anyhow = "1.0.97"
